<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DIONARO</string>
    <string name="title_activity_informacion">Informacion</string>
    <string name="todo">TODO</string>
    <string name="tituloDescubre">Descubre</string>
    <string name="SubtituloAprende">Y Aprende</string>
    <string name="tituloProgreso">Tu Progreso</string>
    <string name="subtituloProgreso">lento pero seguro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tiruloTarjetaDescubre">Nomre de App</string>
    <string name="textoAleatorio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel dignissim nisl.</string>
    <string name="tituloTarjetaProgreso">Material</string>
    <string name="textoTarjetaProgreso">Última vez que se abrio dd / mm / aa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textoFichaRecordatorioDia">Dia</string>
    <string name="tituloRecordatorio">Recordatorio #</string>
    <string name="textoNotaRecordatorio"> Nota del recordatorio</string>
    <string name="textoHoraRecordatorio">hh : mm</string>
    <string name="tituloNotas">Notas</string>
    <string name="subtituloAvancesFavoritos">Filtra por tema</string>
    <string name="subtituloMaterial">Material</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textoFechaTarjetaFav">Fecha de guardado</string>
    <string name="fechaEjemplo">dd / mm / aa</string>
    <string name="tituloPerfil">Tu Perfil</string>
    <string name="textoNombrePerfil">Nombre actual</string>
    <string name="textoPassword">Contraseña actual</string>
    <string name="textoEmail">Email actual</string>
    <string name="textoFechaNacimiento">Fecha de Nacimiento</string>
    <string name="textoBotonGuardar">Guardar</string>
    <string name="botonEliminarPerfil">Eliminar perfil</string>
    <string name="textoBusqueda">Buscar</string>
    <string name="textoBotonBuscar">Buscar</string>
    <string name="textoBotonCancelar">Cancelar</string>
    <string name="tituloBuscado">Buscado</string>
    <string name="textoMaterialVideo">Videos</string>
    <string name="tituloTemas">Temas</string>
    <string name="Tema1">inversión</string>
    <string name="Tema2">credito</string>
    <string name="Tema3">seguros</string>
    <string name="Tema4">presupuesto</string>
    <string name="Tema5">gastos</string>
    <string name="Tema6">ingresos</string>
    <string name="Tema7">deudas</string>
    <string name="Tema8">jubilación</string>
    <string name="Tema9">ahorro</string>
    <string name="textoMaterialApps">Apps</string>
    <string name="textoMaterialCursos">Cursos</string>
    <string name="textoMaterialSoftwares">Progra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textoMaterialArtículos">Docs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo">Titulo</string>
    <string name="fechaNotas">dd / mm / aa</string>
    <string name="textoNotas">Tus ideas</string>
    <string name="opcionUnoMenuNotas">Ajuste de texto</string>
    <string name="opcionDosMenuNotas">Ingresar plantilla</string>
    <string name="botonOk" tools:ignore="ButtonCase">OK</string>
    <string name="tituloMenu">Menú</string>
    <string name="opcionTresMenuNotas">Eliminar nota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloGuardaProgreso">¡ Guarda tu progreso !</string>
    <string name="TextoSinAance">No tienes avances</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

</resources>