<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonBuscarTema"
        style="@style/botonesLargos"
        android:layout_marginBottom="8dp"
        android:text="@string/textoBotonBuscar"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelarTEmas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gurpoTemas"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCancelarTEmas"
        style="@style/botonesLargos"
        android:layout_marginBottom="24dp"
        android:text="@string/textoBotonCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscarTema"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/tituloTemas"
        android:textColor="@color/naranja"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/gurpoTemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema1" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema2" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema3" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema4" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema5" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema6" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema7" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema8" />

        <RadioButton
            style="@style/RadioButtonTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tema9" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>