<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".Perfil.Perfil">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        style="@style/imagenPerfil"
        android:src="@drawable/imagen_perfil"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/BotonIconoBlancoSecundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:contentDescription="@string/tituloTarjetaProgreso"
        app:layout_constraintBottom_toBottomOf="@+id/botonHomeNotas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonHomeNotas2"
        app:layout_constraintTop_toTopOf="@+id/botonHomeNotas2"
        app:srcCompat="@drawable/icons8_emergency_exit_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/botonHomeNotas2"
        style="@style/BotonIconoBlancoSecundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="321dp"
        android:contentDescription="@string/todo"
        android:onClick="regresarInicio"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_home_24"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        style="@style/TituloExtraNaranja"
        android:layout_width="140dp"
        android:layout_height="131dp"
        android:text="@string/tituloPerfil"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonHomeNotas2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/InputInformacion"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/textoNombrePerfil"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        style="@style/InputInformacion"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/textoPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        style="@style/InputInformacion"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/textoEmail"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:ignore="LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextDate"
        style="@style/InputInformacion"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:text="@string/textoFechaNacimiento"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/InputInformacion"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/botonesLargos"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/rounded_shape_orange"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        style="@style/botonesLargos"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@drawable/rounded_shape_orange"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        style="@style/SubtituloBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonGuardar"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        style="@style/SubtituloBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonEliminarPerfil"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>