<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/inputBusquedaTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:fontFamily="@font/bubblegum_sans"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/textoBusqueda"
        app:layout_constraintBottom_toTopOf="@+id/buttonBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <Button
        android:id="@+id/buttonBuscar"
        style="@style/botonesLargos"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textoBotonBuscar"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBusquedaTexto"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCancelar"
        style="@style/botonesLargos"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textoBotonCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscar"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>